--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'com.google.firebase:firebase-database:20.1.0'
 
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
