--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 
 dependencies {
 
-
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation platform('com.google.firebase:firebase-bom:30.5.0')
     implementation 'com.google.firebase:firebase-auth'
@@ -60,6 +60,10 @@ dependencies {
     implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
     implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
     implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
+
+
 
 //    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
 //    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
