--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,20 @@
         android:theme="@style/Theme.FYPProject"
         tools:targetApi="31">
         <activity
+            android:name=".BackupPost"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".UserMainPost"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ForgetPassword"
             android:exported="false">
             <meta-data
@@ -37,13 +51,6 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".UserMainPost"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".SignUp"
             android:exported="false">
             <meta-data
@@ -52,7 +59,8 @@
         </activity>
         <activity
             android:name=".UserMainFragment"
-            android:exported="false">
+            android:exported="false"
+            tools:ignore="DuplicateActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
