--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,19 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     implementation 'com.google.firebase:firebase-database:20.1.0'
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
 
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
+
+    //chat library
+//    implementation "io.getstream:stream-chat-android-ui-components:5.8.2"
+//    implementation "androidx.activity:activity-ktx:1.5.1"
+//    implementation "io.coil-kt:coil:2.1.0"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
