--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,16 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
-//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
-//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
+    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
+    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
+    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
 
 
 
-
-    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
-    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
-    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
+//
+//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
+//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
+//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
