--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
 dependencies {
 
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.6.1'
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -52,16 +52,16 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
-    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\activation.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\additional.jar')
+//    implementation files('C:\\Users\\Adminstrator\\Desktop\\FYPProject\\libs\\mail.jar')
 
 
 
-//
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
-//    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
+
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\activation.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\additional.jar')
+    implementation files('C:\\Users\\CJ\\AndroidStudioProjects\\FYPProject\\libs\\mail.jar')
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -86,7 +86,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //multidex
-    implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
 }
